--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -27,7 +27,7 @@ body{
 	background-color: #2d3034;
 }
 .logo{
-	height: 130px;
+	height: 132px;
 
 }
 .logo img{
@@ -52,5 +52,45 @@ body{
 
 .main_nav .navbar-nav>li>a {
 	color: #bebfc1;
+
+}
+.search_area{
+	float: right;
+	margin-top: 5px;
+	margin-right: 15px;
+}
+
+.search_input{
+	background-color: #282b2f;
+	border: 0;
+	height: 32px;
+	width: 140px;
+	font-size: 11px;
+	padding: 10px;
+	outline: 0;
+	color: white;
+}
+
+.search_submit{
+	background-color: #3e4145;
+	border: 0;
+	height: 32px;
+	color: white;
+	font-size: 11px;
+	width: 80px;
+}
+
+.main_info{
+	background-color: white;
+	height: 56px;
+}
+.social_area{
+	background-color: #3382b5;
+	height: 100%;
+	margin-top: -9px;
+
+}
+.main_info .row{
+	margin: 0;
 
 }
