--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,125 +1,202 @@
-body{
-	margin: 0;
+body {
+	margin:0;
+	background-color:#e7e7e7;
 }
-
-.top_header{
-	background-color: #222326;
-	height: 45px;
-	border-bottom: 1px solid #414346;  
+.top_header {
+	background-color:#222326;
+	height:45px;
+	border-bottom:1px solid #414346;
 }
-.navbar-defaut{
-	background: none;
+.navbar-default {
+	background:none;
 	border:0;
 }
 .navbar-nav>li>a {
-    padding-top: 11px;
-    padding-bottom: 13px;
-    color:white;
-}
-.nav>li>a:focus, .nav>li>a:hover {
-    background-color: #6f6f6f;
+	padding-top: 12px;
+    padding-bottom: 12px;
+    color:#FFFFFF;
 }
 
-
+.navbar-default .navbar-nav>li>a {
+	color:#FFFFFF;
+}
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
+	color:#CCCCCC;
+}
 
 .main_header {
-	height: 235px;
-	background-color: #2d3034;
+	height:235px;
+	background-color:#2d3034;
 }
-.logo{
-	height: 132px;
-
+.logo {
+	height:133px;
 }
-.logo img{
-	height: 120px;
-	width: auto;
-	
-}
-
-
-.main_nav_border{
-	border-top: 2px solid #27292d;
-	border-left: 2px solid #27292d;
-	border-right: 2px solid #27292d;
-
+.logo img {
+	height:100px;
+	width:auto;
+	margin-top:15px;
 }
 
-.main_nav{
-	height: 45px;
-	border-top:1px solid #36393c; 
-
+.main_nav_border {
+	border-top:2px solid #27292d;
+	border-left:2px solid #27292d;
+	border-right:2px solid #27292d;
+}
+.main_nav {
+	height:45px;
+	border-top:1px solid #36393c;
+}
+.main_nav .nav>li>a:focus,
+.main_nav .nav>li>a:hover {
+	background:#393e45;
 }
 
 .main_nav .navbar-nav>li>a {
-	color: #bebfc1;
-
-}
-.search_area{
-	float: right;
-	margin-top: 5px;
-	margin-right: 15px;
+	color:#bebfc1;
 }
 
-.search_input{
-	background-color: #282b2f;
-	border: 0;
-	height: 32px;
-	width: 140px;
-	font-size: 11px;
-	padding: 10px;
-	outline: 0;
-	color: white;
+.search_area {
+	float:right;
+	margin-top:5px;
+	margin-right:15px;
+}
+.search_input {
+	background-color:#282b2f;
+	border:0;
+	width:140px;
+	height:32px;
+	font-size:11px;
+	padding:10px;
+	outline:0;
+	color:#FFFFFF;
+}
+.search_submit {
+	background-color:#3e4145;
+	border:0;
+	height:32px;
+	color:#FFF;
+	font-size:11px;
 }
 
-.search_submit{
-	background-color: #3e4145;
-	border: 0;
-	height: 32px;
-	color: white;
-	font-size: 11px;
-	width: 80px;
+.main_info {
+	background-color:#FFFFFF;
+	height:55px;
 }
 
-.main_info{
-	background-color: white;
-	height: 56px;
+.social_area {
+	background-color:#3382b5;
+	height:100%;
+	margin-top:-8px;
+	color:#c2dae9;
 }
-.social_area{
-	background-color: #3382b5;
-	height: 57px;
-	margin-top: -8px;
-	color: #c2dae9;
-
+.main_info .row {
+	margin:0;
 }
-.main_info .row{
-	margin: 0;
-
-}
-.randompost{
-	line-height: 55px;
+.randompost {
+	line-height:55px;
 	color:#999999;
 }
-.randompost a{
-
+.randompost a {
 	color:#999999;
-	margin-left: 30px;
+	margin-left:30px;
 }
-
-.socialtxt{
+.socialtxt {
 	line-height: 55px;
-	float: left;
-
+	float:left;
 }
-
-.socialicons{
-	float: right;
-	height: 20px;
-	margin-top: 17px;
+.socialicons {
+	float:right;
+	height:20px;
+	margin-top:17px;
 }
-
-.socialicons img{
-	height: 20px;
+.socialicons img {
+	height:20px;
 }
-.socialicons a{
+.socialicons a {
 	text-decoration: none;
 }
+section .row {
+	margin:0;
+}
+.sidebar {
+	background-color:#eeeeee;
+}
+.sidebar .widget {
+	border-bottom:2px solid #e4e4e4;
+}
+.sidebar .widget .tagcloud {
+	padding-bottom:20px;
+}
+.sidebar .widget .tagcloud a {
+	background-color:#94c345;
+	color:#FFFFFF;
+	padding:10px;
+}
+.maincontent {
+	background-color:#FFFFFF;
+}
+
+footer {
+	margin-top:55px;
+}
+.footer_widgets {
+	background-color:#FFFFFF;
+	padding:20px;
+}
+
+.footer_widgets .row {
+	display:flex;
+}
+.footer_widgets .widget {
+	width:100%;
+}
+
+.mainfooter {
+	height:55px;
+	background-color:#2d3034;
+	color:#FFFFFF;
+}
+.mainfooter_left {
+	float:left;
+	line-height:55px;
+	margin-left:15px;
+}
+.mainfooter_right {
+	float:right;
+	line-height:55px;
+	margin-right:15px;
+}
+.mainfooter_scroll {
+	position:absolute;
+	background-color:#e7e7e7;
+	width:55px;
+	height:30px;
+	left:50%;
+	margin-left:-27px;
+	border-bottom-left-radius:8px;
+	border-bottom-right-radius:8px;
+	text-align:center;
+	cursor:pointer;
+}
+.mainfooter_scroll img {
+	height:20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
