--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -183,15 +183,76 @@ footer {
 }
 
 
+.maincontent article{
+	width: 50%;
+	float: left;
+}
 
+.maincontent article a{
+	text-decoration: none;
+}
 
+.post_item{
+	margin: 15px;
 
+	height: 400px;
+}
 
+.post_comment_area{
+	background-color: #5a99b0;
+	background-image: url('../images/chat.png');
+	background-size: 16px 16px;
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	color: #FFF;
+	height: 22px;
+	font-size: 13px;
+	line-height: 22px;
+	padding-left: 31px;
+	padding-right: 10px;
+	float: right;
+	position: relative;
+	z-index: 99;
+}
 
+.post_info{
+	background-color: white;
+	min-height: 200px;
+}
 
+.post_thumb{
+	width: 100%
+	height:auto;
+	margin-top: -15px;
+}
 
+.post_data{
+	color: #b0afb0;
+	margin-top: 5px;
+	text-transform: uppercase;
+}
 
+.post_title{
+	font-size: 20px;
+	color: #1e1e1e;
+}
 
+.post_excerpt{
+	color: #b0afb0;
+}
+
+.previous_pag{
+	float: left;
+	text-align: left;
+}
+.next_pag{
+	float: right;
+	text-align: right;
+}
+
+.pag{
+	margin: 25px;
+}
 
 
 
